RESOLVED FIXED287584
Fix fullscreen/iframe-fullscreen-system-exit.html in debug builds after 290260@main
https://bugs.webkit.org/show_bug.cgi?id=287584
Summary Fix fullscreen/iframe-fullscreen-system-exit.html in debug builds after 29026...
Alex Christensen
Reported 2025-02-12 14:35:07 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-12 14:35:28 PST
Alex Christensen
Comment 2 2025-02-12 14:36:49 PST
EWS
Comment 3 2025-02-12 14:39:08 PST
Committed 290303@main (843b474ba527): <https://commits.webkit.org/290303@main> Reviewed commits have been landed. Closing PR #40507 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.