Fix fullscreen/iframe-fullscreen-system-exit.html in debug builds after 290260@main https://bugs.webkit.org/show_bug.cgi?id=287584 rdar://144731535

Unreviewed.

290260@main added a WKStringIsEqualToUTF8CString case without a return.
This adds the missing return so we don't hit the ASSERT_NOT_REACHED.

* Tools/WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::didReceiveMessageFromInjectedBundle):

Canonical link: https://commits.webkit.org/290303@main